--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
+
 body{
     background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
     background-repeat: no-repeat;
     background-size: cover;
     font-family: 'Kumbh Sans', sans-serif;
-   
+    padding-bottom: 110px;
 }
 div{
     background-color: white;
@@ -14,7 +15,7 @@ div{
     margin-right: auto;
     border-radius: 0.5em;
     width: 58%;
-    height: 90%;
+    height: 100%;
     padding: 2em;
     display: flex;
     flex-flow: row wrap;
